--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
               <img src="images/visa.png">
               <img src="images/mastercard.png">
             </div>
-          </div>
+          </div>           
+          <button>Pay</button>
         </div>
       </div>
     </div>
