--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
           <div class="totalPrice"></div>
           <div class="card">
             <div class="inputs">
-              <input type="text" name="cardNum" placeholder="Card Number"/>
-              <input type="text" name="cardName" placeholder="Card Holder Name"/>
+              <input type="text" name="cardNum" placeholder="Card Number" />
+              <input
+                type="text"
+                name="cardName"
+                placeholder="Card Holder Name"
+              />
             </div>
             <div class="cardType">
-              <img src="images/visa.png">
-              <img src="images/mastercard.png">
+              <img src="images/visa.png" />
+              <img src="images/mastercard.png" />
             </div>
-          </div>           
+          </div>
           <button>Pay</button>
         </div>
       </div>
