--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         Pay by Credit Card <img src="images/cart.png" />
         <span class="cart"></span>
       </h1>
-      <hr />
       <div class="container">
         <div class="containerPart menu"></div>
         <div class="containerPart orederSummaryView">
@@ -32,7 +31,7 @@
               <img src="images/mastercard.png" />
             </div>
           </div>
-          <button>Pay</button>
+          <button class="payBtn">Pay</button>
         </div>
       </div>
     </div>
