--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <div class="mainContainer">
       <h1>
         Pay by Credit Card <img src="images/cart.png" />
-        <span class="cart"></span>
+        <span class="itemsCount"></span>
       </h1>
       <div class="container">
         <div class="containerPart menu"></div>
-        <div class="containerPart orederSummaryView">
-          <div class="orderSummary"></div>
-          <div class="totalPrice"></div>
+        <div class="containerPart">
+          <div class="orderSummary">Order Summary</div>
+          <div class="totalPrice">Total Price</div>
           <div class="card">
-            <div class="inputs">
+            <div class="inputsCard">
               <input type="text" name="cardNum" placeholder="Card Number" />
               <input
                 type="text"
